1999-09-11  Marius Vollmer  <mvo@zagadka.ping.de>

	* readline.scm: Moved to ../guile-readline.

	* boot-9.scm (top-repl): Removed code for ativating readline.

	* Makefile.am: Removed mention of readline.scm.

	* Makefile.in: Regenerated.
	
1999-09-11  Jim Blandy  <jimb@savonarola.red-bean.com>

	Delete the test which compares the configuration date of libguile
	with the configuration date of ice-9.  This test yields too many
	false positives to be helpful.  For example, if you build Guile
	for several architectures but have them all share a "share"
	directory (which is supposed to work), then all but one
	architecture's Guile will complain that the configuration dates
	don't match.  Which is true, but indicates nothing wrong.
	* boot-9.scm: Delete code which compares ice-9-config-stamp with
	libguile-config-stamp.
	* version.scm.in: Delete.
	* Makefile.am (ice9_generated): Delete.
	(subpkgdata_DATA): Remove ice9_generated.
	(EXTRA_DIST): Remove version.scm.in.
	* Makefile.in: Regenerate.

1999-09-11  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

*	* debugger.scm: New file: Initial version of the Guile debugger
	written by Chris Hanson.  (The debugger isn't finished, but is
	included in Guile anyway since it is already quite useful.)
	Use readline conditionally.

*	* boot-9.scm (top-repl): Use (ice-9 debug) (ice-9 debugger) (ice-9
	session) (ice-9 threads) (ice-9 regex) from guile-user only if
	top-repl is called.  This makes startup time for scripts 30% of
	what it was before...  Removed redundant code for loading of
	readline.

	* Makefile.am (ice9_sources): Added debugger.scm.

1999-08-29  Keisuke Nishida  <kxn30@po.cwru.edu>

	* boot-9.scm (try-module-autoload): Use %search-load-path.
	
1999-08-24  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* boot-9.scm: Removed old style hooks.
	(inherit-print-state): Rwwritten to use port-with-print-state.

1999-08-20  James Blandy  <jimb@mule.m17n.org>

	Remove support for the #/ path list syntax entirely.